manifests/kubernetes-dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nrt1-kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  defaultBackend:
    service:
      name: kubernetes-dashboard-kong-proxy
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - nrt1-kubernetes-dashboard
